# izumi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  PKGBUILD  README.md  configure  configure.ac  default.nix  flake.nix  meson.build  meson_options.txt
.github/workflows/: nix-build.yml
build-tools/: gen-public-header.py  list-curses-includes.py  list-undocumented-items.py  locate-sources.py  meson.build  run-in-source-root.sh
examples/: add_output  addi_output
izumi_tui/: .gitignore  Makefile.am  configure.ac  default.nix  flake.nix
izumi_tui/src/: Makefile.am  configure.c  files.c  interact.c  izumi_tui.mk
izumi_tui/src/include/: configure.h  system_curses.h
libizumi/: Makefile.am  configure.ac  default.nix  flake.nix
libizumi/docs/: Doxyfile.in  index.dox
libizumi/src/: Makefile.am  finder.c
libizumi/src/include/izumi/: data_structs.h  finder.h
src/: CMakeLists.txt  Makefile.am  command_tree.c  command_tree.h  commands.c  commands.h  config.c  config.h  data_structs.c  data_structs.h  files.c  files.h  finder.c  finder.h  interact.c  interact.h  main.c  meson.build  parser.c  parser.h  settings.c  settings.h  stage.h  window.c  window.h
src/izumi_tui/: CMakeLists.txt  Makefile.am  command_tree.c  commands.c  files.c  finder.c  interact.c  main.c  meson.build  window.c
src/izumi_tui/include/: command_tree.h  commands.h  errors.h  files.h  finder.h  interact.h  meson.build  system_curses.h.in  window.h
src/libizumi/: CMakeLists.txt  Makefile.am  data_structs.c  finder.c  izumi.pc.in  libizumi.mk  meson.build  parser.c
src/libizumi/docs/: CMakeLists.txt  Doxyfile.in  api.md  index.md  introduction.md  meson.build  sitemap.txt
src/libizumi/include/: meson.build  parser.h
src/libizumi/include/izumi/: data_structs.h  finder.h  meson.build  parser.h
