# Python 3 runs all tools
python3 = find_program('python3')

list_curses_includes = [python3, files('list-curses-includes.py')]
list_undocumented_items = [python3, files('list-undocumented-items.py')]
locate_sources = [python3, files('locate-sources.py')]

# Some sh is required...
sh = find_program('sh')

run_in_source_root = [sh, files('run-in-source-root.sh')]
